diesel_compile_tests/tests/fail/derive_deprecated/deprecated_changeset_options.stderr
warning: #[changeset_options] attribute form is deprecated
  = help: use `#[diesel(treat_none_as_null = true)]` instead

error: unexpected end of input, expected parentheses
  --> tests/fail/derive_deprecated/deprecated_changeset_options.rs:21:3
   |
LL | #[changeset_options]
   |   ^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected identifier
  --> tests/fail/derive_deprecated/deprecated_changeset_options.rs:30:20
   |
LL | #[changeset_options()]
   |                    ^^

error: expected `treat_none_as_null`
  --> tests/fail/derive_deprecated/deprecated_changeset_options.rs:39:21
   |
LL | #[changeset_options(what)]
   |                     ^^^^

error: unexpected end of input, expected `=`
       help: the correct format looks like `#[diesel(treat_none_as_null = true)]`
  --> tests/fail/derive_deprecated/deprecated_changeset_options.rs:48:21
   |
LL | #[changeset_options(treat_none_as_null)]
   |                     ^^^^^^^^^^^^^^^^^^

error: expected boolean literal
  --> tests/fail/derive_deprecated/deprecated_changeset_options.rs:57:42
   |
LL | #[changeset_options(treat_none_as_null = "what")]
   |                                          ^^^^^^
